<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="enter_foods_save_trip">Save shopping trip</string>
    <string name="empty">Empty</string>
    <string name="app_name">WhatsForLunch</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_new_trip">New Shopping Trip</string>
    <string name="main_edit_trip">Edit Shopping Trip</string>
    <string name="main_see_whats_for_lunch">See Whats For Lunch</string>
    <string name="main_user_settings">User Settings</string>
    <string name="main_general_food_tips">General Food Tips</string>
    <string name="enter_foods_auto_complete">Enter food to add</string>
    <string name="enter_foods_prompt">Enter food:</string>
    <string name="enter_foods_category1">Category1</string>
    <string name="enter_foods_category2">Category2</string>
    <string name="enter_foods_expiration_date_prompt">Enter expiration date:</string>
    <string name="enter_foods_shopping_trip_so_far">Trip so far</string>
    <string name="review_trip_name">Trip Name (ex: Walmart 7/20)</string>
    <string name="review_trip_money">$ (Optional)</string>
    <string name="review_trip_delete">Delete</string>
    <string name="review_trip_confirm">Confirm</string>
    <string name="review_trip_edit">Edit Trip</string>
    <string name="review_trip_list_title">Shopping List</string>
    <string name="settings_push_notifications">Push Notifications</string>
    <string name="settings_reminder">Days Before Reminder</string>
    <string name="settings_on_off">On/Off</string>
    <string name="title_activity_enter__foods">Enter_Foods</string>
    <string name="title_activity_user__settings">User_Settings</string>
    <string name="enter_foods_add">Enter item to add</string>
    <string name="title_activity_display__trip">Display_Trip</string>
    <string name="title_activity_trip_select">Trip Selection</string>
    <string name="enter_foods_condition_radio">Select food condition</string>
    <string name="enter_foods_category_prompt">Or pick a category:</string>

    <string-array name="food_conditions">
        <item>(optional) Enter food condition</item>
        <item>Ripe</item>
        <item>Fresh</item>
        <item>Normal</item>
        <item>Aged</item>
    </string-array>

    <string name="condition_excellent">Excellent</string>
    <string name="add_directions">Fill in both fields with text and click the "add" button.</string>
    <string name="add">Add</string>
    <string name="delete_directions">To delete a row, type the "id" of the row in the field provided and press the "delete" button.</string>
    <string name="delete">delete</string>
    <string name="update_directions">To update a row, type the "id" of the row in the first field and type the new information into the next two fields.</string>
    <string name="retrieve">get</string>
    <string name="update">update</string>
    <string name="th_id">ID</string>
    <string name="th_text_one">Text Field One</string>
    <string name="th_text_two">Text Field Two</string>
    <string name="title_activity_trip__edit">Edit Trip</string>
    <string name="title_activity_see_whats_for_lunch">See What\'s For Lunch</string>
    <string name="action_settings">Settings</string>
    <string name="settings_settings">Settings</string>
    <string name="settings_freshness_percentage_subtraction">Freshness Percentage Subtraction</string>
    <string name="trip_edit_remove">Remove</string>
    <string name="all_foods_table_name">Name</string>
    <string name="all_foods_table_date_purchased">Date Purchased</string>
    <string name="all_foods_table_date_expired">Date Expired</string>
    <string name="all_foods_table_categories">Categories</string>
    <string name="all_foods_table_main_heading">All My Foods</string>
    <string name="title_activity_whats_for_lunch">What\'s For Lunch?</string>
    <string name="whats_for_lunch_given_recipes">Generated Recipes (All Foods)</string>
    <string name="whats_for_lunch_my_recipes">My Recipes</string>
    <string name="whats_for_lunch_get_more_recipes">Expiring Foods</string>
    <string name="whats_for_lunch_get_user_recipes">Add my recipes</string>
    <string name="whats_for_lunch_more">Search</string>
    <string name="review_trip_remove">Remove Checked Items</string>
    <string name="trip_edit_trip_name">Trip Name</string>
    <string name="trip_edit_delete_trip">Delete Trip</string>
    <string name="enter_foods_redone_add">Add item by entry</string>
    <string name="enter_foods_redone_date_prompt">Click to Enter Expiration Date</string>
    <string name="title_activity_ef__add_items__fragment">EF_AddItems_Fragment</string>
    <string name="title_activity_ef__current_trip__fragment">EF_CurrentTrip_Fragment</string>
    <string name="title_activity_enter_foods_revamp">Enter Foods</string>
    <string name="title_activity_item_edit">Item Edit</string>
    <string name="yes">Yes</string>
    <string name="no_nameforme">No, name it for me</string>
    <string name="title_activity_prompt_trip_name">Prompt Trip Name</string>
    <string name="whats_for_lunch_all_foods">All Foods</string>
    <string name="user_recipes_enter_name">Name</string>
    <string name="user_recipes_enter_ingredients">Ingredients</string>
    <string name="user_recipes_enter_recipe">Recipe</string>
    <string name="save_user_recipes">Save</string>
    <string name="user_recipe_title">Add My Recipe</string>
    <string name="title_activity_notification">Nofif</string>
    <string name="whats_for_lunch_search_terms">Search Terms</string>
    <string name="item_edit_save">Save</string>
    <string name="item_edit_expiration_date">Expiration Date:</string>
    <string name="item_edit_delete_item">Delete Item</string>


</resources>
