<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/user_recipes_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_recipes_enter_name" />

        <EditText
            android:id="@+id/user_recipes_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_recipes_enter_ingredients" />

        <EditText
            android:id="@+id/user_recipe_recipe"
            android:layout_width="match_parent"
            android:layout_height="372dp"
            android:ems="10"
            android:hint="@string/user_recipes_enter_recipe"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/save_user_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_toRightOf="@+id/linearLayout1"
        android:onClick="createRecipe"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:text="@string/save_user_recipes" />

</RelativeLayout>