<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal" >

        <!-- Heading for the table -->
        <TextView
            android:id="@+id/textView8"
            android:layout_gravity="center"
            android:text="@string/all_foods_table_main_heading"
            android:textSize="18sp"
            android:textStyle="bold" />
 
    </TableRow>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <!-- Ignoring warning for now, seems to work as intended, trying to fix it seems like it breaks -->
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <!-- Column 1 Name -->
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_foods_table_name"
                android:layout_weight="0.2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/all_foods_table_date_purchased"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_foods_table_date_expired"
                android:layout_weight="0.2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_foods_table_categories"
                android:layout_weight="0.2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>
    </TableLayout>

</TableLayout>
