<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!-- Heading for the recipes we give the user -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_for_lunch_given_recipes"
        android:layout_weight="0.25"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <!-- Button to send recipes to API, need to put recipes below heading/above button 
    	 TODO: make button test better, need to advertise recipes are weighted toward expiring foods
    	 in a better less wordy way-->
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_for_lunch_get_more_recpies" />

    <!-- Heading for the recipes user wants to input-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/whats_for_lunch_my_recipes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- Allow user to enter their own recipes, again display above button below heading -->
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_for_lunch_get_user_recipes" />

    </LinearLayout>