<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/greentextured"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/user_recipes_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_foods_redone_add" >

        <requestFocus android:layout_width="match_parent" />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
            
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="s"
	        android:text="@string/enter_foods_redone_date_prompt" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TabHost
                android:id="@android:id/tabhost"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </TabWidget>

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <LinearLayout
                            android:id="@+id/tab_add_items"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/tab_current_trip"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >
                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>
            </TabHost>
        </LinearLayout>

        <ExpandableListView
            android:id="@+id/expandableListView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ExpandableListView>

    </LinearLayout>
